<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>fanuc_j519_utils</name>
  <version>0.1.0</version>
  <description>Very simple scripts to interact with a J519 server.</description>
  <author>G.A. vd. Hoorn</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>
